# agents-template

./: PROTOCOL.md  README.md  agents_cli.py  current_task.md  pyproject.toml  roles.yaml
discussions/: README.md
templates/: javascript.yaml  python.yaml
workspace/claude/: README.md
workspace/gemini/: README.md
workspace/opencode/: README.md
