[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-collab"
version = "1.0.0"
description = "Multi-Agent Collaboration CLI Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "loboking"}
]
keywords = ["ai", "agents", "collaboration", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
agents = "agents_cli:cli"

[project.urls]
Homepage = "https://github.com/loboking/agents-template"
Repository = "https://github.com/loboking/agents-template"
